Visuals now use relative scaling in container

--- a/index.html
+++ b/index.html
@@ -190,6 +190,7 @@
           Visualisation created by Thomas Doyle in October 2024. Data obtained from 
             <a href="https://economics.adelaide.edu.au/wine-economics/databases#">The University of Adelaide</a>, 
             <a href="https://www.aihw.gov.au/reports/alcohol/apparent-consumption-of-alcohol-in-australia/contents/apparent-consumption-of-alcohol-in-australia-1944">The Australian Institute of Health and Welfare</a>, 
+            <a href="https://wineaustralia-opendata-wineaustralia.hub.arcgis.com/">Wine Australia</a>, 
             <a href="https://www.abs.gov.au/statistics/standards/australian-statistical-geography-standard-asgs-edition-3/jul2021-jun2026/access-and-downloads/digital-boundary-files">The Australian Bureau of Statistics</a>, and
             <a href="https://www.naturalearthdata.com/downloads/110m-physical-vectors/">Natural earth data</a>.         
         </span>
