Added annotations, improved horizontal sightlines

--- a/index.html
+++ b/index.html
@@ -59,6 +59,8 @@
           Major wine regions include Barossa Valley in South Australia, Hunter Valley in New
           South Wales, and Margaret River in Western Australia.
           <br><br>
+          <i>Tip: Try scrolling through the years, or zooming into a state!</i>
+          <br><br>
           <span class="source-text">Source: <a href="https://winefolly.com/deep-dive/australia-wine-regions-map/"
               target="_blank">https://winefolly.com/deep-dive/australia-wine-regions-map/</a></span>
         </p>
@@ -66,13 +68,13 @@
 
       <div class="pure-u-1-3">
         <!-- <h3>Yields by State</h3> -->
-         <br>
+         <br><br>
         <div id="map-state" class="vis-container"></div>
       </div>
 
       <div class="pure-u-1-3">
         <!-- <h3>Yields by Region</h3> -->
-        <br>
+        <br><br>
         <div id="map-region" class="vis-container"></div>
       </div>
 
@@ -88,7 +90,7 @@
 
       <div class="pure-u-4-24">
         <p>
-          <br><br>
+          <br>
           In Australia, the move toward French wine varieties has been dramatic. This is because varieties known for
           producing premium still and sparkling wines are now preferred over those traditionally used for fortified
           wines.
@@ -99,6 +101,8 @@
           Adaptation strategies include switching to warmer-climate or more-resilient grape varieties, and re-locating
           to a region at a higher latitude or elevation to retain the current mix of grape varieties in their portfolio.
           <br><br>
+          <i>Tip: Try hovering over the area chart!</i>
+          <br><br>
           <span class="source-text">Source: <a
               href="https://economics.adelaide.edu.au/wine-economics/databases#australian-winegrape-vine-area-production-and-price-database-by-region-and-variety-1956-to-2023"
               target="_blank">University of Adelaide</a></span>
@@ -106,13 +110,13 @@
       </div>
 
       <div class="pure-u-8-24">
+        <p style="font-size: 9px;">  </i>
         <div id="scatter" class="vis-container"></div>
-
       </div>
 
       <div class="pure-u-4-24">
         <p>
-          <br><br>
+          <br>
           Major grape varieties are Shiraz, Pinot noir, Cabernet Sauvignon, Merlot, Chardonnay, Sauvignon blanc,
           Sémillon, and Riesling.
           <br><br>
@@ -120,6 +124,8 @@
           blackberry, mint and black pepper.
           <br><br>
           Chardonnay wine tends to be medium to light body with noticeable acidity and flavors of green plum, apple, and pear. In warmer locations like Adelaide Hills and Mornington Peninsula, the flavors become more citrus, peach, and melon.
+          <br><br>
+          <i>Tip: Try scrolling through the years, or selecting a colour!</i>
           <br><br>
           <span class="source-text">Source: <a href="https://en.wikipedia.org/wiki/Australian_wine"
               target="_blank">Wikipedia</a>
@@ -136,8 +142,7 @@
       <div class="pure-u-8-24">
         <h3>Consumption</h3>
         <p>
-          Apparent consumption of alcohol refers to the total amount of alcohol produced or imported
-          that will be sold to people living in Australia.
+          Apparent consumption of alcohol refers to the total amount of alcohol that will be sold to people living in Australia.
           <br><br>
           Per capita wine consumption remains at one of the highest levels in the last 60 years, and accounted for 42%
           of the total apparent alcohol consumption, making it the largest category.
@@ -150,6 +155,8 @@
           <br><br>
           Cider continues to make up a small portion of the total amount of alcohol made available in Australia.
           <br><br>
+          <i>Tip: Try hovering over the pie chart!</i>
+          <br><br>
           <span class="source-text">Source: <a
               href="https://www.aihw.gov.au/reports/alcohol/apparent-consumption-of-alcohol-in-australia/contents/apparent-consumption-of-alcohol-in-australia-1944"
               target="_blank">Australian Institute of Health and Welfare</a>
@@ -158,20 +165,21 @@
       </div>
 
       <div class="pure-u-4-24">
-        <br><br>
+        <br><br><p style="font-size: 2px;">  </i>
         <div id="pie-consumption" class="vis-container"></div>
       </div>
 
       <div class="pure-u-4-24">
         <h3>Imports and Exports</h3>
         <p>
-          Australian wine has gained global recognition,and are now exported to over 100 countries, making it one of the
+          Australian wine has gained global recognition, and are now exported to over 100 countries, making it one of the
           top wine-exporting nations.
           <br><br>
-          In 2023, 621 million litres of wine were exported, valued at $1.86 billion. The top destination market by
-          value was the UK with 19%, closely followed by the US, also with 19%.
+          Wine exports peaked in 2007 at $2.76 billion. The top destination markets were the UK and the US at 19% each.
           <br><br>
-          In the domestic market, Australian wine sales makes up 82% of sales, with an estimated 444 million litres.
+          Domestically, Australian wine sales make up about 82% of sales, with an estimated 444 million litres.
+          <br><br>
+          <i>Tip: Try hovering over the line chart!</i>
           <br><br>
           <span class="source-text">Source: <a
               href="https://www.wineaustralia.com/market-insights/australian-wine-sector-at-a-glance"
